// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render IngredientListHeader correctly 1`] = `
<div>
  <h3 />
</div>
`;

exports[`should render IngredientListHeader with category 1`] = `
<div>
  <h3>
    Spices
  </h3>
</div>
`;
